samples/_failures_safe/1761455437_71261a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9a18e4c6.c: In function ‘main’:
./samples/SAFE/__tmp_9a18e4c6.c:162:9: error: expected declaration or statement at end of input
  162 |         if (collection->size >= MAX_ENTRIES) {
      |         ^~
./samples/SAFE/__tmp_9a18e4c6.c:162:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9a18e4c6.c:162:9: error: expected declaration or statement at end of input
